<resources>
    <string name="app_name">ChineseChess</string>
    <string name="developer">DisStudio</string>
    <string name="copyright">All copyright @DisStudio 2017 "-" 2019</string>
    <string name="start_game">开始游戏</string>
    <string name="online_game">联机游戏</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="app_version">0.0.1</string>
    <string name="app_introduce">\t\t《中国象棋》由DisStudio开发。\n\t\t其中，由XuHuan负责美术，由Dis负责程序，由Dis负责策划及后期处理。\n\t\t本项目仅用于学习交流，请勿用作商业用途。 \n\t\t部分素材来源于Internet，若有侵权请及时告知，我们将及时删除替换有关内容。\n2019.1.22</string>
    <string name="background_music">背景音乐</string>
    <string name="palyer_name">玩家名称</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="regret_game">悔棋</string>
    <string name="vs">VS</string>
    <string name="port">端口</string>
    <string name="ip">IP</string>
    <string name="opponent">对手</string>
    <string name="self">自己</string>
    <string name="sound_effects">声音效果</string>
</resources>
