<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/main_start_game_btn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/btn_bg_slc"
            android:text="@string/start_game" />

        <Button
            android:id="@+id/main_online_game_btn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/btn_bg_slc"
            android:text="@string/online_game" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_about_btn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_slc"
                android:text="@string/about" />

            <Button
                android:id="@+id/main_setting_btn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_slc"
                android:text="@string/setting" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>