<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_background_rl">

    <ImageView
        android:id="@+id/about_icon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/about_app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/about_icon_iv"
        android:text="@string/app_name"
        android:textSize="15sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/about_app_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_app_name_tv"
        android:layout_centerHorizontal="true"
        android:text="@string/app_version"
        android:textSize="12sp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/about_copyright_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright"
        android:textSize="10sp"
        android:textColor="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/about_app_version_tv"
        android:layout_above="@+id/about_copyright_tv"
        android:layout_marginTop="25dp"
        android:background="#66000000">

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/about_introduce_tv"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/app_introduce"
            android:textSize="25sp"
            android:lineSpacingMultiplier="2"
            android:textColor="@android:color/white"/>

    </ScrollView>

</RelativeLayout>
