<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/setting_bgm_box_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_bgm_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_music"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/setting_bgm_switch_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_sound_effects_box_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_bgm_box_ly"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/setting_sound_effects_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_effects"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/setting_sound_effects_switch_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_name_box_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_sound_effects_box_ly"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/setting_player_name_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/palyer_name"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/setting_player_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="25sp"/>

    </LinearLayout>

</RelativeLayout>